[package]
name = "indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = "0.9.2"
deadpool-lapin = "0.10.0"
futures-lite = "^1.7"
lapin = "2.1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"

[dev-dependencies]
wiremock = "0.5.2"